# gilt-cli

./: .gitignore  .hone-gates.json  AGENTS.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  EVENT_SOURCING.md  GUI_README.md  PLAN-SUBSCRIPTIONS.md  Qt.md  README.md  conftest.py  mkdocs.yml  pyproject.toml
.claude/agents/: python-craftsperson.md  python-qt-craftsperson.md
.claude/skills/epilogue-tracker/: SKILL.md
.claude/skills/finance-cli/: SKILL.md
.claude/skills/gilt/: SKILL.md
.github/: copilot-instructions.md
.github/agents/: researcher.agent.md
.github/workflows/: ci.yml  release.yml
.junie/: guidelines.md
archive/: 2025-10-13-budgeting-design.md  2025-10-22-phase2-data-management.md  2025-10-22-phase3-import-wizard.md  2025-10-23-claude-guidelines.md  2025-10-23-gui-readme.md  2025-10-23-phase4-budget-dashboard.md  2025-10-23-qt-implementation-plan.md
audit/: maintain-2026-02-19-021930-actions.md  maintain-2026-02-19-021957-actions.md  maintain-2026-02-19-022116-actions.md  maintain-2026-02-19-022212-actions.md  maintain-2026-02-19-022437-actions.md  maintain-2026-02-19-022627-actions.md  maintain-2026-02-19-022644-actions.md  maintain-2026-02-19-022651-actions.md  maintain-2026-02-19-022710-actions.md  maintain-2026-02-19-022737-actions.md  maintain-2026-02-19-023128-actions.md  maintain-2026-02-19-023150-actions.md  maintain-2026-02-19-023218-actions.md  maintain-2026-02-19-023256-actions.md  maintain-2026-02-19-023620-actions.md  maintain-2026-02-19-023823-actions.md  maintain-2026-02-19-023826-actions.md  maintain-2026-02-19-023843-actions.md  maintain-2026-02-19-023912-actions.md  maintain-2026-02-20-021512-actions.md  maintain-2026-02-22-020851-actions.md  maintain-2026-02-27-020630-actions.md  maintain-2026-03-02-020932-actions.md  maintain-2026-03-15-020535-actions.md  maintain-2026-03-27-030629-actions.md  maintain-2026-03-27-030648-actions.md  maintain-2026-03-29-034313-actions.md  maintain-2026-04-17-041142-actions.md  maintain-2026-04-18-044749-actions.md  maintain-2026-05-12-050137-actions.md  maintain-2026-05-13-051750-actions.md  maintain-2026-05-17-045851-actions.md  maintain-2026-05-18-045215-actions.md  maintain-2026-05-19-055015-actions.md  maintain-2026-06-07-030449-actions.md  maintain-2026-06-08-035526-actions.md  maintain-2026-06-09-040423-actions.md  maintain-2026-06-10-035117-actions.md  maintain-2026-06-10-041213-actions.md  maintain-2026-06-11-035338-actions.md  (+12 more)
config/: accounts.yml  categories.yml
docs/: README.md  getting-started.md  index.md
docs/developer/: index.md
docs/developer/architecture/: data-model.md  project-structure.md  system-design.md
docs/developer/history/: phase2-summary.md  phase3-summary.md  phase4-summary.md
docs/developer/technical/: auto-categorization.md  budgeting-system.md  duplicate-detection-ml-proposal.md
docs/user/: index.md  installation.md
docs/user/cli/: index.md
docs/user/gui/: importing.md  index.md
docs/user/workflows/: budget-tracking.md  initial-setup.md  monthly-review.md  upgrading-to-event-sourcing.md
scripts/: benchmark_categorization.py
skills/gilt/references/: command-reference.md
src/finance/: __init__.py  config.py
src/finance/cli/: __init__.py  app.py
src/finance/gui/: __init__.py  app.py  main_window.py  theme.py
src/finance/ml/: __init__.py  categorization_classifier.py  categorization_classifier_spec.py  categorization_training_builder.py  categorization_training_builder_spec.py  duplicate_classifier.py  duplicate_classifier_spec.py  feature_extractor.py  feature_extractor_spec.py  training_data_builder.py  training_data_builder_spec.py
src/finance/model/: __init__.py  account.py  category_io.py  category_io_spec.py  category_spec.py  duplicate.py  events_spec.py  ledger_io.py
src/finance/scripts/: migrate_event_schema.py
src/finance/services/: __init__.py  budget_service.py  (+17 more)
src/gilt/: __init__.py  config.py  conftest.py  workspace.py  workspace_spec.py
(+505 files in other folders)
