[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gilt-cli"
version = "0.3.2"
description = "Local-only, privacy-first personal finance CLI"
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Stacey Vetzal", email = "stacey@mojility.ca" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "pandas",
  "pyyaml",
  "pydantic>=2,<3",
  "mojentic",
  "typer>=0.12,<1",
  "rich>=13,<15",
  "scikit-learn>=1.3,<2",
  "numpy>=1.24,<3",
]

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "mkdocs",
  "mkdocs-material",
  "griffe-fieldz",
  "pymdown-extensions",
]

[project.optional-dependencies]
# GUI dependencies (install with: uv sync --extra gui)
gui = [
  "PySide6>=6.5",
]

# ML dependencies for fast duplicate detection (install with: pip install -e ".[ml]")
ml = [
  "lightgbm>=4.0,<5",
]

[project.urls]
Homepage = "https://github.com/svetzal/gilt-cli"
Repository = "https://github.com/svetzal/gilt-cli"
Issues = "https://github.com/svetzal/gilt-cli/issues"

[project.scripts]
gilt = "gilt.cli.app:app"
gilt-gui = "gilt.gui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gilt"]
exclude = ["*_spec.py"]

[tool.hatch.build.targets.sdist]
exclude = ["*_spec.py"]

[tool.ruff]
# Target Python 3.13 syntax/features for linting and rules
target-version = "py313"
line-length = 100
# Exclude generated/output data
exclude = [
  ".venv",
  "venv",
  "data",
  "ingest",
  "reports",
]

[tool.ruff.lint]
# Keep it minimal; you can enable more rulesets later
select = ["E", "F"]
# E402: all source files use module docstrings before imports (intentional style)
# E501: line length enforced by ruff format; remaining violations are unbreakable strings
ignore = ["E402", "E501"]


[tool.pyright]
pythonVersion = "3.13"
include = ["src"]
exclude = [
  "**/__pycache__",
  "venv",
  ".venv",
  "data",
  "ingest",
  "reports",
]
# Basic type checking by default; can be set to "strict" later per file/folder
typeCheckingMode = "basic"

[tool.pytest.ini_options]
# Discover specs alongside source files
python_files = "*_spec.py"
python_classes = "Describe*"
python_functions = "it_should_*"
testpaths = ["src"]
addopts = "-q"
